<resources>
    <string name="app_name">AllAboutTanks</string>
    <string name="heroes_name">Nama Tank</string>
    <string name="description">Deskripsi</string>
    <string name="action_about">About</string>
    <string name="senjata_utama">Senjata Utama\t\t\t\t\t\t:</string>
    <string name="nilai_spesifikasi">%s</string>
    <string name="senjata_sekunder">Senjata Sekunder\t\t\t\t:</string>
    <string name="berat">Berat\t\t\t\t\t\t\t\t\t\t\t:</string>
    <string name="kecepatan_maksimum">Kecepatan Maksimum\t:</string>
    <string name="ketebalan_armour">Ketebalan Armour\t\t\t\t:</string>
    <string name="tank_history">Tank History</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="sejarah">Sejarah</string>
    <string name="column2">:</string>
    <string name="name">Muhammad Eri Setyawan</string>
    <string name="email">erisetyawan1@gmail.com</string>
    <string-array name="data_name">
        <item>M1 Abrams</item>
        <item>Leopard 2A4</item>
        <item>Challenger Mk.2</item>
        <item>T-80BVM</item>
        <item>Type 10</item>
        <item>Merkava Mk.4M</item>
        <item>M3A3 Bradley</item>
        <item>Leopard 2 PL</item>
        <item>ADATS (M113)</item>
        <item>Khrizantema-S</item>
    </string-array>
    <string-array name="data_description">
        <item>Tank tempur utama milik Angkatan Darat Amerika Serikat. Berat, kuat, dilengkapi meriam 120mm, dan memiliki perlindungan baja. Tank ini menggunakan mesin gas turbine untuk kecepatan tinggi.</item>
        <item>Tank tempur utama yang digunakan oleh banyak negara, termasuk Jerman. Tank ini memiliki berat lebih dari 60 ton dan dilengkapi dengan meriam utama 120mm, perlindungan berlapis baja yang kuat, serta sistem komunikasi dan navigasi modern.</item>
        <item>Tank tempur utama yang digunakan oleh Angkatan Darat Britania Raya. Ini adalah tank yang sangat berat dan kuat, dengan berat lebih dari 60 ton. Challenger 2 dilengkapi dengan meriam utama 120mm yang sangat akurat, perlindungan berlapis baja yang sangat kuat, dan sistem komunikasi dan navigasi modern. Tank ini diakui karena tingkat perlindungannya yang tinggi dan kemampuan operasionalnya yang baik di berbagai kondisi medan.</item>
        <item>Tank tempur utama yang dikembangkan oleh Rusia. Ini adalah versi yang telah diperbarui dari tank T-80, yang dikenal karena kecepatan tinggi dan kemampuan tembak yang kuat. T-80BVM dilengkapi dengan senjata utama 125mm, perlindungan berlapis baja yang ditingkatkan, serta sistem elektronik dan navigasi modern. Tank ini cocok untuk berbagai jenis medan dan telah digunakan dalam Angkatan Darat Rusia serta beberapa negara lainnya.</item>
        <item>Tank tempur utama yang diproduksi oleh Jepang. Tank ini adalah tank generasi terbaru yang ringan, cepat, dan dilengkapi dengan meriam utama 120mm serta perlindungan yang canggih. Type 10 dirancang untuk mobilitas tinggi dan kemampuan tempur modern. Ini adalah tank yang efisien dalam konsumsi bahan bakar dan cocok untuk operasi di medan perkotaan serta medan terbuka.</item>
        <item>Tank tempur utama yang digunakan oleh Angkatan Pertahanan Israel. Ini adalah tank berat yang kuat, dirancang dengan perlindungan yang sangat baik dan meriam utama 120mm. Merkava Mk.4M memiliki kemampuan pertahanan tinggi dan sistem perlindungan pasif serta aktif yang canggih. Tank ini juga dilengkapi dengan sistem komunikasi dan navigasi modern serta kemampuan operasi di berbagai kondisi medan.</item>
        <item>Kendaraan tempur infanteri yang digunakan oleh Angkatan Darat Amerika Serikat. Ini adalah kendaraan lapis baja yang dilengkapi dengan senjata utama meriam 25mm dan peluncur rudal. M3A3 Bradley dirancang untuk mengangkut pasukan infanteri dan memberikan dukungan tembakan kepada mereka dalam pertempuran. Kendaraan ini memiliki sistem komunikasi dan navigasi yang canggih serta perlindungan yang moderat terhadap ancaman musuh.</item>
        <item>Varian dari tank tempur utama Leopard 2 yang digunakan oleh Angkatan Darat Polandia. Ini adalah tank yang kuat dan modern, dilengkapi dengan meriam utama 120mm serta perlindungan berlapis baja yang ditingkatkan. Leopard 2 PL dirancang untuk operasi di berbagai medan dan telah digunakan oleh Polandia sebagai salah satu kendaraan tempur utamanya.</item>
        <item>Pada dasarnya bukanlah tank tempur, tetapi sistem pertahanan udara dan anti-tank yang digunakan dalam kendaraan M113. Ini adalah sistem pertahanan udara yang ditingkatkan yang dilengkapi dengan rudal anti-tank dan rudal permukaan-ke-udara. Tank ADATS (M113) digunakan untuk melindungi pasukan dari ancaman udara dan tank musuh serta memberikan dukungan pertahanan udara yang efektif.</item>
        <item>sistem rudal anti-tank yang dikembangkan oleh Rusia. Ini adalah sistem yang sangat canggih yang dirancang untuk melawan tank musuh. Khrizantema-S dilengkapi dengan rudal anti-tank yang sangat akurat dan memiliki jarak tembak yang jauh. Sistem ini juga memiliki kemampuan penembakan ganda dan dapat mengatasi ancaman tank musuh yang kuat. Khrizantema-S cocok untuk operasi di medan perang modern.</item>
    </string-array>
    <string-array name="data_photo">
        <item>https://wiki.warthunder.com/images/thumb/d/da/GarageImage_M1_Abrams.jpg/1200px-GarageImage_M1_Abrams.jpg</item>
        <item>https://wiki.warthunder.com/images/thumb/0/0c/GarageImage_Leopard_2A4.jpg/1200px-GarageImage_Leopard_2A4.jpg</item>
        <item>https://wiki.warthunder.com/images/thumb/f/f2/GarageImage_Challenger_Mk.2.jpg/1200px-GarageImage_Challenger_Mk.2.jpg</item>
        <item>https://wiki.warthunder.com/images/thumb/f/f4/GarageImage_T-80BVM.jpg/1200px-GarageImage_T-80BVM.jpg</item>
        <item>https://wiki.warthunder.com/images/thumb/e/e0/GarageImage_Type_10.jpg/1200px-GarageImage_Type_10.jpg</item>
        <item>https://wiki.warthunder.com/images/thumb/1/19/GarageImage_Merkava_Mk.4M.jpg/1200px-GarageImage_Merkava_Mk.4M.jpg</item>
        <item>https://wiki.warthunder.com/images/thumb/0/0b/GarageImage_M3A3_Bradley.jpg/1200px-GarageImage_M3A3_Bradley.jpg</item>
        <item>https://wiki.warthunder.com/images/thumb/6/65/GarageImage_Leopard_2_PL.jpg/1200px-GarageImage_Leopard_2_PL.jpg</item>
        <item>https://wiki.warthunder.com/images/thumb/b/b8/GarageImage_ADATS_%28M113%29.jpg/1200px-GarageImage_ADATS_%28M113%29.jpg</item>
        <item>https://wiki.warthunder.com/images/thumb/b/be/GarageImage_Khrizantema-S.jpg/1200px-GarageImage_Khrizantema-S.jpg</item>
    </string-array>
    <string-array name="data_senjata_utama">
        <item>105mm M68A1 rifled gun</item>
        <item>Rheinmetall 120mm smoothbore gun</item>
        <item>L30A1 120mm rifled gun</item>
        <item>2A46M-5 125mm smoothbore gun</item>
        <item>120mm smoothbore gun</item>
        <item>Rheinmetall 120mm smoothbore gun</item>
        <item>M242 Bushmaster 25mm chain gun</item>
        <item>Rheinmetall 120mm smoothbore gun</item>
        <item>ADATS missile system</item>
        <item>Ataka supersonic anti-tank guided missiles</item>


    </string-array>
    <string-array name="data_senjata_sekunder">
        <item>M2 Browning .50 caliber machine gun</item>
        <item>MG3 7.62mm machine gun</item>
        <item>L94A1 7.62mm chain gun</item>
        <item>PKTM 7.62mm machine gun</item>
        <item>M2 Browning 12.7mm machine gun</item>
        <item>M2 Browning 12.7mm machine gun</item>
        <item>TOW anti-tank guided missiles</item>
        <item>MG3 7.62mm machine gun</item>
        <item>M2 Browning 12.7mm machine gun</item>
        <item>7.62mm PKTM machine gun</item>


    </string-array>
    <string-array name="data_berat">
        <item>61.4 ton</item>
        <item>55.15 tons</item>
        <item>62.5 tons</item>
        <item>46 tons</item>
        <item>48 tons</item>
        <item>65 tons</item>
        <item>27.6 tons</item>
        <item>62 tons</item>
        <item>14.6 tons</item>
        <item>9.7 tons</item>


    </string-array>
    <string-array name="data_kecepatan_maksimum">
        <item>70 mph (112.65 km/h)</item>
        <item>43 mph (70 km/h)</item>
        <item>56 mph (90 km/h)</item>
        <item>43 mph (70 km/h)</item>
        <item>43 mph (70 km/h)</item>
        <item>40 mph (64 km/h)</item>
        <item>41 mph (66 km/h)</item>
        <item>43 mph (70 km/h)</item>
        <item>40 mph (65 km/h)</item>
        <item>43 mph (70 km/h)</item>


    </string-array>
    <string-array name="data_ketebalan_armor">
        <item>Frontal: 450 mm, Turret: 650 mm</item>
        <item>Frontal: 500 mm, Turret: 800 mm</item>
        <item>Frontal: 450 mm, Turret: 800 mm</item>
        <item>Frontal: Classified, Turret: Classified</item>
        <item>Frontal: Classified, Turret: Classified</item>
        <item>Frontal: Classified, Turret: Classified</item>
        <item>Frontal: Classified, Turret: Classified</item>
        <item>Frontal: Classified, Turret: Classified</item>
        <item>Frontal: Classified, Turret: Classified</item>
        <item>Frontal: Classified</item>


    </string-array>
</resources>