<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardTank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="#e0e4e4"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvTankName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/heroes_name"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imgTank"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    tools:srcCompat="@tools:sample/avatars" />

                <TableLayout
                    android:id="@+id/specificationsTable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp">

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:paddingEnd="8dp"
                            android:text="@string/senjata_utama"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvMainArmament"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:text="@string/nilai_spesifikasi" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:paddingEnd="8dp"
                            android:text="@string/senjata_sekunder"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvSecondaryArmament"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:text="@string/nilai_spesifikasi" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:paddingEnd="8dp"
                            android:text="@string/berat"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvWeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:text="@string/nilai_spesifikasi" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:paddingEnd="8dp"
                            android:text="@string/kecepatan_maksimum"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvTopSpeed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:text="@string/nilai_spesifikasi" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:gravity="start"
                            android:paddingEnd="8dp"
                            android:text="@string/ketebalan_armour"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvArmour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:text="@string/nilai_spesifikasi" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Title for Description -->
        <TextView
            android:id="@+id/tvDescriptionTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="18dp"
            android:text="@string/deskripsi"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardTank" />

        <!-- Description -->
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="18dp"
            android:justificationMode="inter_word"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescriptionTitle" />

        <!-- Title for Tank History -->
        <TextView
            android:id="@+id/tvHistoryTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="18dp"
            android:text="@string/sejarah"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

        <!-- History -->
        <TextView
            android:id="@+id/tvHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="18dp"
            android:justificationMode="inter_word"
            android:text="@string/tank_history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHistoryTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
